version/0.3/_sources/examples/run_python_script/02_2_oscillator_python_system.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/run_python_script/02_2_oscillator_python_system.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_run_python_script_02_2_oscillator_python_system.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_run_python_script_02_2_oscillator_python_system.py:


.. _ref_oscillator_python_systems:

Oscillator parametric system
----------------------------

This example demonstrates how to create and run parametric system for an oscillator.

It uses the ``oscillator_system_python.py`` file to create and run the
parametric system for an oscillator. It then explains how you can optionally
save a copy of the project to a desired location.

.. GENERATED FROM PYTHON SOURCE LINES 15-18

Perform required imports
~~~~~~~~~~~~~~~~~~~~~~~~
Perform the required imports.

.. GENERATED FROM PYTHON SOURCE LINES 18-22

.. code-block:: default


    from ansys.optislang.core import Optislang
    import ansys.optislang.core.examples as examples


.. GENERATED FROM PYTHON SOURCE LINES 23-26

Create optiSLang instance
~~~~~~~~~~~~~~~~~~~~~~~~~
Create the optiSLang instance.

.. GENERATED FROM PYTHON SOURCE LINES 26-30

.. code-block:: default


    osl = Optislang()
    print(osl)


.. GENERATED FROM PYTHON SOURCE LINES 31-35

Get path of example script and run it
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Get the path of the example script and then run
this script.

.. GENERATED FROM PYTHON SOURCE LINES 35-39

.. code-block:: default


    paths = examples.get_files("oscillator_system_python")
    osl.run_python_file(paths[0])


.. GENERATED FROM PYTHON SOURCE LINES 40-43

Run workflow
~~~~~~~~~~~~
Run the workflow created by the preceding script.

.. GENERATED FROM PYTHON SOURCE LINES 43-46

.. code-block:: default


    osl.start()


.. GENERATED FROM PYTHON SOURCE LINES 47-57

Optionally save project
~~~~~~~~~~~~~~~~~~~~~~~
If you want to save the project to some desired
location, uncomment and edit these lines:

.. code:: python

  path = r'<insert-desired-location>'
  osl.save_as(os.path.join(path, "test_project.opf"))


.. GENERATED FROM PYTHON SOURCE LINES 59-62

Stop and cancel project
~~~~~~~~~~~~~~~~~~~~~~~
Stop and cancel the project.

.. GENERATED FROM PYTHON SOURCE LINES 62-65

.. code-block:: default


    osl.dispose()


.. GENERATED FROM PYTHON SOURCE LINES 66-74

View generated workflow
~~~~~~~~~~~~~~~~~~~~~~~
This image shows the generated workflow.

.. image:: ../../_static/02_2_python_system.png
 :width: 300
 :alt: Result of script.



.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.000 seconds)


.. _sphx_glr_download_examples_run_python_script_02_2_oscillator_python_system.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: 02_2_oscillator_python_system.py <02_2_oscillator_python_system.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: 02_2_oscillator_python_system.ipynb <02_2_oscillator_python_system.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
